Archivos html Computador

--- a/JS/computer/index.html
+++ b/JS/computer/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Computadores</h1>
 
-        <h4>Registra el dispositivo</h4>
+        <h4>Registra un nuevo dispositivo</h4>
         <table border="1">
 
             <tr>
@@ -43,7 +43,7 @@
             </tr>
         </table>  
         <br>
-        <button onclick="guardar()">Guardar</button>
+        <button onclick="guardar()">Guardar computador</button>
 
         <h4>Dispositivos Registrados</h4> 
         <button onclick="consultar()">Consultar Datos</button>
