--- a/JS/computer/detalleComputador.html
+++ b/JS/computer/detalleComputador.html
@@ -6,8 +6,8 @@
         <title>Detalle Computador</title>
     </head>
     <body>
-        <h1>Detalle del dispositivo</h1>
-        <h4>Registra el computador</h4>
+        <h1>Detalle del computador</h1>
+        <h4>Registra el dispositivo</h4>
         <table border="1">
             <tr>
                 <td>
@@ -41,7 +41,7 @@
         </table>
         
         <br>
-        <button id="boton" onclick="actualizar()">Actualizar</button>
+        <button id="boton" onclick="actualizar()">Actualizar computador</button>
 
         <br/><br/><br/>
         <a href="index.html">Ir al Inicio</a>
