Intendo de resolver problemas #1

--- a/JS/computer/detalleComputador.html
+++ b/JS/computer/detalleComputador.html
@@ -11,7 +11,7 @@
         <table border="1">
             <tr>
                 <td>
-                ID <input type="number" id="id" disabled /> <br/>
+                ID <input type="number" id="id_com" disabled /> <br/>
                 </td>
             </tr>
 
