--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="JS/client/consultar.js"></script>
   <script type="text/javascript" src="JS/client/guardar.js"></script>
   <script type="text/javascript" src="JS/client/eliminar.js"></script>
-  <title>Reto 2</title>
+  <title></title>
 </head>
 
 <body>
@@ -17,7 +17,6 @@
 
   </div>
 
-  <!-- COMIENZA EL FORMULARIO PARA REGISTRO DE CLIENTES -->
   <div id="form-client">
     <h2>Registro de Clientes:</h2>
     <br>
@@ -35,7 +34,6 @@
     <div id="tabla"></div>
 
   </div>
-  <!-- TERMINA EL FORMULARIO PARA REGISTRO DE CLIENTES -->
 
   <div id="form-message">
 
