Se actualizan los id #

--- a/detalle.html
+++ b/detalle.html
@@ -6,10 +6,10 @@
     </head>
     <body>
         <h1>Detalle de Cliente</h1>
-        ID <input type="number" id="id" disabled /> <br/>
-        Name <input type="text" id="name" /> <br/>
-        Email <input type="text" id="email" /> <br/>
-        Age <input type="number" id="age" /> <br/>
+        ID <input type="number" id="id-client" disabled /> <br/>
+        Name <input type="text" id="name-client" /> <br/>
+        Email <input type="text" id="email-client" /> <br/>
+        Age <input type="number" id="age-client" /> <br/>
         <button id="boton" onclick="actualizarCliente()">Actualizar</button>
 
         <br/><br/><br/>
