--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="JS/client/consultar.js"></script>
   <script type="text/javascript" src="JS/client/guardar.js"></script>
   <script type="text/javascript" src="JS/client/eliminar.js"></script>
-  <title>Reto 2</title>
+  
 </head>
 
 <body>
@@ -17,15 +17,14 @@
 
   </div>
 
-  <!-- COMIENZA EL FORMULARIO PARA REGISTRO DE CLIENTES -->
   <div id="form-client">
     <h2>Registro de Clientes:</h2>
     <br>
     <h4>Registra un cliente</h4>
-    ID <input type="number" id="id"> <br/>
-    NAME <input type="text" id="name"> <br/>
-    EMAIL <input type="text" id="email"> <br/>
-    AGE <input type="number" id="age"> <br/>
+    ID <input type="number" id="id-client"> <br/>
+    NAME <input type="text" id="name-client"> <br/>
+    EMAIL <input type="text" id="email-client"> <br/>
+    AGE <input type="number" id="age-client"> <br/>
     <button onclick="guardarCliente()">Guardar</button>
     <br>
     <br>
@@ -35,7 +34,6 @@
     <div id="tabla"></div>
 
   </div>
-  <!-- TERMINA EL FORMULARIO PARA REGISTRO DE CLIENTES -->
 
   <div id="form-message">
 
