Correccion de errores #1

--- a/detalleComputador.html
+++ b/detalleComputador.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-        <script type="text/javascript" src="js/detalleComputador.js"></script>
-        <script type="text/javascript" src="js/actualizarComputador.js"></script>
+        <script type="text/javascript" src="JS/computer/detalleComputador.js"></script>
+        <script type="text/javascript" src="JS/computer/actualizarComputador.js"></script>
         <title>Detalle Computador</title>
     </head>
     <body>
