--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -22,86 +22,100 @@
 <body>
   <div class="container">
     <div id="form-computer" class="container__div">
-      <h2>Computadores</h2>
-        <h4>Registra un nuevo dispositivo</h4>
-        <table border="1">
-          <tr>
-            <td>
-              ID <input type="number" id="id_com"/><br/>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              Brand <input type="text" id="brand_com"/><br/>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              Model <input type="number" id="model_com"/><br/>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              Category_ID <input type="number" id="category_id"/><br/>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              Name <input type="text" id="name_com"/><br/>
-            </td>
-          </tr>
-        </table>  
-        <br>
-        <button onclick="guardar()">Guardar computador</button>
-      <h4>Dispositivos Registrados</h4> 
-      <button onclick="consultarComputer()">Consultar Datos</button>
+      <h2>Computer</h2>
+      <h4>Register a new Computer</h4>
+      <table border="1">
+        <tr>
+          <td>
+            <label for="id_com">ID</label>
+            <input type="number" id="id_com"/>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label for="brand_com">BRAND</label>
+            <input type="text" id="brand_com"/>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label for="model_com">MODEL</label>
+            <input type="number" id="model_com"/>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label for="category_id">CATEGORY ID</label>
+            <input type="number" id="category_id"/>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label for="name_com">NAME</label>
+            <input type="text" id="name_com"/>
+          </td>
+        </tr>
+      </table>
+      <h4>Data Base</h4> 
+      <button onclick="guardar()">SAVE</button>
+      <button onclick="consultarComputer()">CHECK</button>
       <div id="tabla-computer"></div>
     </div>
   
     <div id="form-client" class="container__div">
-      <h2>Registro de Clientes:</h2>
-      <br>
-      <h4>Registra un cliente</h4>
-      <label for="id-client">ID</label>
-      <input type="number" id="id-client">
-      <label for="name-client">NAME</label>
-      <input type="text" id="name-client">
-      <label for="email-client">EMAIL</label>
-      <input type="text" id="email-client">
-      <label for="age-client">AGE</label>
-      <input type="number" id="age-client">
-      <button onclick="guardarCliente()">Guardar</button>
-      <br>
-      <br>
-  
-      <h4>Clientes Registrados:</h4>
-      <button onclick="consultarClient()">Consultar Datos</button>
+      <h2>Client</h2>
+      <h4>Register a new Client</h4>
+      <table border="1">
+        <tr>
+          <td>
+            <label for="id-client">ID</label>
+            <input type="number" id="id-client">
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label for="name-client">NAME</label>
+            <input type="text" id="name-client">
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label for="email-client">EMAIL</label>
+            <input type="text" id="email-client">
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label for="age-client">AGE</label>
+            <input type="number" id="age-client">
+          </td>
+        </tr>
+      </table>
+      <h4>Data Base</h4>
+      <button onclick="guardarCliente()">SAVE</button>
+      <button onclick="consultarClient()">CHECK</button>
       <div id="tabla-client"></div>
     </div>
   
     <div id="form-message" class="container__div">
-      <h2>Agrega un mensaje</h2>
-      <h4>
-          Registra un nuevo mensaje:
-      </h4>
+      <h2>Message</h2>
+      <h4>Register a new Message</h4>
       <table border="1">
-          <tr>
-              <td>
-                  <label>ID: </label>
-                  <input id="id" type="text"/>
-              </td>
-          </tr>
-          <tr>
-              <td>
-                  <label>MESSAGETEXT: </label>
-                  <input id="messagetext" type="text"/>
-              </td>
-          </tr>
+        <tr>
+          <td>
+            <label>ID: </label>
+            <input id="id" type="text"/>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <label>MESSAGETEXT: </label>
+            <input id="messagetext" type="text"/>
+          </td>
+        </tr>
       </table>  
-      <button onclick="guardarMensaje()">Guardar un mensaje</button>
-      <br>
-      <br>
-      <button onclick = "consultarMessage()">Consultar mensajes</button>
+      <button onclick="guardarMensaje()">SAVE</button>
+      <button onclick = "consultarMessage()">CHECK</button>
       <div id="tabla-message"></div>
     </div>
   </div>
