Colores y estilos generales de index.html terminados

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <script type="text/javascript" src="JS/client/consultar.js"></script>
   <script type="text/javascript" src="JS/client/guardar.js"></script>
   <script type="text/javascript" src="JS/client/eliminar.js"></script>
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="CSS/indexStyle.css">
   <title>Reto 2 Misión TIC USA</title>
 </head>
 
@@ -101,13 +101,13 @@
       <table border="1" class="container__div--table">
         <tr>
           <td>
-            <label>ID: </label>
+            <label>ID</label>
             <input id="id" type="text"/>
           </td>
         </tr>
         <tr>
           <td>
-            <label>MESSAGETEXT: </label>
+            <label>MESSAGETEXT</label>
             <input id="messagetext" type="text"/>
           </td>
         </tr>
