Arreglados botones y textos en todas las tablas

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script type="text/javascript" src="JS/client/guardar.js"></script>
   <script type="text/javascript" src="JS/client/eliminar.js"></script>
   <link rel="stylesheet" href="CSS/indexStyle.css">
-  <title>Reto 2 Misión TIC USA</title>
+  <title>Reto 2 Misión TIC 2022</title>
 </head>
 
 <body>
@@ -90,8 +90,8 @@
           </td>
         </tr>
       </table>
-      <button onclick="guardarCliente()" class="button__save">SAVE</button>
-      <button onclick="consultarClient()" class="button__check">CHECK</button>
+      <button onclick="guardarCliente()" class="button__save">SAVE CLIENT</button>
+      <button onclick="consultarClient()" class="button__check">CHECK DATA BASE</button>
       <div id="tabla-client" class="container__div--database"></div>
     </div>
   
@@ -112,8 +112,8 @@
           </td>
         </tr>
       </table>  
-      <button onclick="guardarMensaje()" class="button__save">SAVE</button>
-      <button onclick = "consultarMessage()" class="button__check">CHECK</button>
+      <button onclick="guardarMensaje()" class="button__save">SAVE MESSAGE</button>
+      <button onclick = "consultarMessage()" class="button__check">CHECK DATA BASE</button>
       <div id="tabla-message" class="container__div--database"></div>
     </div>
   </div>
