--- a/index.html
+++ b/index.html
@@ -28,31 +28,31 @@
         <tr>
           <td>
             <label for="id_com">ID</label>
-            <input type="number" id="id_com"/>
+            <input type="number" id="id_com" placeholder="number"/>
           </td>
         </tr>
         <tr>
           <td>
             <label for="brand_com">BRAND</label>
-            <input type="text" id="brand_com"/>
+            <input type="text" id="brand_com" placeholder="text"/>
           </td>
         </tr>
         <tr>
           <td>
             <label for="model_com">MODEL</label>
-            <input type="number" id="model_com"/>
+            <input type="number" id="model_com" placeholder="number"/>
           </td>
         </tr>
         <tr>
           <td>
             <label for="category_id">CATEGORY ID</label>
-            <input type="number" id="category_id"/>
+            <input type="number" id="category_id" placeholder="number"/>
           </td>
         </tr>
         <tr>
           <td>
             <label for="name_com">NAME</label>
-            <input type="text" id="name_com"/>
+            <input type="text" id="name_com" placeholder="text"/>
           </td>
         </tr>
       </table>
@@ -68,25 +68,25 @@
         <tr>
           <td>
             <label for="id-client">ID</label>
-            <input type="number" id="id-client">
+            <input type="number" id="id-client" placeholder="number"/>
           </td>
         </tr>
         <tr>
           <td>
             <label for="name-client">NAME</label>
-            <input type="text" id="name-client">
+            <input type="text" id="name-client" placeholder="text"/>
           </td>
         </tr>
         <tr>
           <td>
             <label for="email-client">EMAIL</label>
-            <input type="text" id="email-client">
+            <input type="text" id="email-client" placeholder="text"/>
           </td>
         </tr>
         <tr>
           <td>
             <label for="age-client">AGE</label>
-            <input type="number" id="age-client">
+            <input type="number" id="age-client" placeholder="number"/>
           </td>
         </tr>
       </table>
@@ -102,13 +102,13 @@
         <tr>
           <td>
             <label>ID</label>
-            <input id="id" type="text"/>
+            <input id="id" type="text" placeholder="number"/>
           </td>
         </tr>
         <tr>
           <td>
             <label>MESSAGETEXT</label>
-            <input id="messagetext" type="text"/>
+            <input id="messagetext" type="text" placeholder="text"/>
           </td>
         </tr>
       </table>  
