--- a/detalleComputador.html
+++ b/detalleComputador.html
@@ -3,47 +3,48 @@
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script type="text/javascript" src="JS/computer/detalleComputador.js"></script>
         <script type="text/javascript" src="JS/computer/actualizarComputador.js"></script>
-        <title>Detalle Computador</title>
+        <link rel="stylesheet" href="CSS/detailStyle.css">
+        <title>Computer Details</title>
     </head>
-    <body>
-        <h1>Detalle del computador</h1>
-        <h4>Registra el dispositivo</h4>
-        <table border="1">
-            <tr>
-                <td>
-                ID <input type="number" id="id_com" disabled /> <br/>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                Brand <input type="text" id="brand" /> <br/>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                Model <input type="number" id="model" /> <br/>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                Category_id <input type="text" id="category_id" /> <br/>
-                </td>
-            </tr>
-
-            <tr>
-                <td>
-                Name <input type="text" id="name" /> <br/>
-                </td>
-            </tr>
-        </table>
-        
-        <br>
-        <button id="boton" onclick="actualizar()">Actualizar computador</button>
-
-        <br/><br/><br/>
-        <a href="index.html">Ir al Inicio</a>
+    <body class="container">
+        <div class="container__div" id="container-computer">
+            <h2 class="container__div--title">Computer Details</h2>
+            <table border="1" class="container__div--table">
+                <tr>
+                    <td>
+                        <label for="id_com">ID</label>
+                        <input type="number" id="id_com" disabled/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="brand">BRAND</label>
+                        <input type="text" id="brand"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="model">MODEL</label>
+                        <input type="number" id="model"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="category_id">CATEGORY_ID</label>
+                        <input type="text" id="category_id"/>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="name">NAME</label>
+                        <input type="text" id="name"/>
+                    </td>
+                </tr>
+            </table>
+            <div class="container__div--buttons">
+                <button id="boton" onclick="actualizar()" class="button__update">UPDATE</button>
+                <a href="index.html">HOME</a>
+            </div>
+        </div>
     </body>
 </html>
